# agentCLI

./: .gitignore  LICENSE  README.md  flappy.html  pyproject.toml
.github/workflows/: ci.yml
agentcli/: MANIFEST.sha256  __init__.py  agent.py  audit.py  cli.py  compact.py  config.py  guard.py  gui.py  http.py  images.py  integrity.py  intent.py  jobs.py  models.py  monitor.py  notify.py  permissions.py  picker.py  plan.py  policy_file.py  redact.py  registry.py  render.py  sandbox.py  secure_store.py  setup_wizard.py  store.py  subagents.py  threads.py  tools.py  types.py  ui.py
agentcli/providers/: anthropic.py  base.py  google.py  openai_compat.py
minecraft-threejs/: index.html  package-lock.json  package.json  server.js  test-gen.js  test-init.js
minecraft-threejs/js/: blocks.js  main.js  noise.js  player.js  world.js
minecraft-threejs/public/: index.html
minecraft-threejs/public/css/: style.css
minecraft-threejs/public/js/: blocks.js  game.js  noise.js  player.js  world.js
scripts/: build_manifest.py  obfuscate.py
